Deploy-vNet/vnet-azuredeploy - Copy.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
      "environment": {
        "type": "string",
        "defaultValue": "sb",
        "allowedValues": [
          "sb",
          "dv",
          "qa",
          "pd"
        ],
        "metadata": {
          "description": "The envirnoment: Sandbox (sb), Dev (dv), QA (qa), Prod (qa)"
        }
      },
      "facility": {
        "type": "string",
        "defaultValue": "pri",
        "allowedValues": [
          "pri",
          "dr"
        ],
        "metadata": {
          "description": "The location: 'pri' == westus, 'dr' == eastus"
        }
      }
    },

  "variables": {
    "location": "[if(equals(parameters('facility'), 'pri'), 'westus', 'eastus')]",
    "environmentFacility": "[concat(parameters('environment'), '-', parameters('facility'))]",
    "baseName": "[concat('-ws-', variables('environmentFacility'))]",
    "addressPrefix": "[if(equals(parameters('facility'), 'pri'), '10.0.', '10.1.')]",
    "vnetCIDR": "[concat(variables('addressPrefix'), '0.0/16')]",
    "jumpCIDR": "[concat(variables('addressPrefix'), '3.0/24')]",
    "dbCIDR": "[concat(variables('addressPrefix'), '5.0/24')]",
    "vnetName": "[concat('vnet', variables('baseName'))]",
    "dbSnName": "[concat('sn-db', variables('baseName'))]",
    "dbNsgName": "[concat('nsg-db', variables('baseName'))]",
    "webSnName": "[concat('sn-web', variables('baseName'))]",
    "webNsgName": "[concat('nsg-web', variables('baseName'))]",
    "jumpSnName": "[concat('sn-jump', variables('baseName'))]",
    "jumpNsgName": "[concat('nsg-jump', variables('baseName'))]",
    "webCIDR": "[concat(variables('addressPrefix'), '1.0/24')]"
  },
  "resources": [
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[variables('dbNsgName')]",
      "apiVersion": "2017-06-01",
      "location": "[variables('location')]",
      "scale": null,
      "properties": {
        "securityRules": [
          {
            "name": "RDP_FROM_INTERNET",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "3389",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound",
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "SQL_FROM_WEB",
            "etag": "W/\"fc1e8dc5-1836-4d62-bc83-c0ad3e1e21d8\"",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "1433",
              "destinationPortRange": "1433",
              "sourceAddressPrefix": "[variables('webCIDR')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 1000,
              "direction": "Inbound",
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "SQL_FROM_JUMP",
            "etag": "W/\"fc1e8dc5-1836-4d62-bc83-c0ad3e1e21d8\"",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "1433",
              "destinationPortRange": "1433",
              "sourceAddressPrefix": "[variables('jumpCIDR')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 1001,
              "direction": "Inbound",
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "RDP_FROM_JUMP",
            "etag": "W/\"fc1e8dc5-1836-4d62-bc83-c0ad3e1e21d8\"",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "3389",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "[variables('jumpCIDR')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 1002,
              "direction": "Inbound",
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DENY_ALL_OTHER_SUBNETS",
            "etag": "W/\"fc1e8dc5-1836-4d62-bc83-c0ad3e1e21d8\"",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('vnetCIDR')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 3000,
              "direction": "Inbound",
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          }
        ],
        "defaultSecurityRules": [
          {
            "name": "AllowVnetInBound",
            "etag": "W/\"fc1e8dc5-1836-4d62-bc83-c0ad3e1e21d8\"",
            "properties": {
              "description": "Allow inbound traffic from all VMs in VNET",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 65000,
              "direction": "Inbound",
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "AllowAzureLoadBalancerInBound",
            "etag": "W/\"fc1e8dc5-1836-4d62-bc83-c0ad3e1e21d8\"",
            "properties": {
              "description": "Allow inbound traffic from azure load balancer",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "AzureLoadBalancer",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 65001,
              "direction": "Inbound",
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyAllInBound",
            "etag": "W/\"fc1e8dc5-1836-4d62-bc83-c0ad3e1e21d8\"",
            "properties": {
              "description": "Deny all inbound traffic",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 65500,
              "direction": "Inbound",
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "AllowVnetOutBound",
            "etag": "W/\"fc1e8dc5-1836-4d62-bc83-c0ad3e1e21d8\"",
            "properties": {
              "description": "Allow outbound traffic from all VMs to all VMs in VNET",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 65000,
              "direction": "Outbound",
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "AllowInternetOutBound",
            "etag": "W/\"fc1e8dc5-1836-4d62-bc83-c0ad3e1e21d8\"",
            "properties": {
              "description": "Allow outbound traffic from all VMs to Internet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "Internet",
              "access": "Allow",
              "priority": 65001,
              "direction": "Outbound",
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyAllOutBound",
            "etag": "W/\"fc1e8dc5-1836-4d62-bc83-c0ad3e1e21d8\"",
            "properties": {
              "description": "Deny all outbound traffic",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 65500,
              "direction": "Outbound",
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          }
        ]
      },

      "dependsOn": []
    },

    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[variables('webNsgName')]",
      "apiVersion": "2017-06-01",
      "location": "[variables('location')]",
      "scale": null,
      "properties": {
        "securityRules": [
          {
            "name": "RDP_FROM_INTERNET",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "3389",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound",
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "HTTP_FROM_WEB",
            "etag": "W/\"fc1e8dc5-1836-4d62-bc83-c0ad3e1e21d8\"",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "80",
              "destinationPortRange": "80",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 1000,
              "direction": "Inbound",
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "HTTPS_FROM_WEB",
            "etag": "W/\"fc1e8dc5-1836-4d62-bc83-c0ad3e1e21d8\"",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "443",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 1001,
              "direction": "Inbound",
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "RDP_FROM_JUMP",
            "etag": "W/\"fc1e8dc5-1836-4d62-bc83-c0ad3e1e21d8\"",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "3389",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "[variables('jumpCIDR')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 1002,
              "direction": "Inbound",
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "SQL_TO_DB",
            "etag": "W/\"fc1e8dc5-1836-4d62-bc83-c0ad3e1e21d8\"",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "1433",
              "destinationPortRange": "1433",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "[variables('dbCIDR')]",
              "access": "Allow",
              "priority": 1003,
              "direction": "Outbound",
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DENY_ALL_OTHER_SUBNETS",
            "etag": "W/\"fc1e8dc5-1836-4d62-bc83-c0ad3e1e21d8\"",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('vnetCIDR')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 3000,
              "direction": "Inbound",
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          }
        ],

        "defaultSecurityRules": [
          {
            "name": "AllowVnetInBound",
            "etag": "W/\"fc1e8dc5-1836-4d62-bc83-c0ad3e1e21d8\"",
            "properties": {
              "description": "Allow inbound traffic from all VMs in VNET",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 65000,
              "direction": "Inbound",
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "AllowAzureLoadBalancerInBound",
            "etag": "W/\"fc1e8dc5-1836-4d62-bc83-c0ad3e1e21d8\"",
            "properties": {
              "description": "Allow inbound traffic from azure load balancer",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "AzureLoadBalancer",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 65001,
              "direction": "Inbound",
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyAllInBound",
            "etag": "W/\"fc1e8dc5-1836-4d62-bc83-c0ad3e1e21d8\"",
            "properties": {
              "description": "Deny all inbound traffic",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 65500,
              "direction": "Inbound",
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "AllowVnetOutBound",
            "etag": "W/\"fc1e8dc5-1836-4d62-bc83-c0ad3e1e21d8\"",
            "properties": {
              "description": "Allow outbound traffic from all VMs to all VMs in VNET",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 65000,
              "direction": "Outbound",
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "AllowInternetOutBound",
            "etag": "W/\"fc1e8dc5-1836-4d62-bc83-c0ad3e1e21d8\"",
            "properties": {
              "description": "Allow outbound traffic from all VMs to Internet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "Internet",
              "access": "Allow",
              "priority": 65001,
              "direction": "Outbound",
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyAllOutBound",
            "etag": "W/\"fc1e8dc5-1836-4d62-bc83-c0ad3e1e21d8\"",
            "properties": {
              "description": "Deny all outbound traffic",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 65500,
              "direction": "Outbound",
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[variables('jumpNsgName')]",
      "apiVersion": "2017-06-01",
      "location": "[variables('location')]",
      "scale": null,
      "properties": {
        "securityRules": [
          {
            "name": "RDP_FROM_INTERNET",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "3389",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 1000,
              "direction": "Inbound",
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          }
        ]
      }
    },



        {
          "type": "Microsoft.Network/virtualNetworks",
          "name": "[variables('vnetName')]",
          "apiVersion": "2017-06-01",
          "location": "[variables('location')]",
          "scale": null,
          "properties": {
            "addressSpace": {
              "addressPrefixes": [
                "[variables('vnetCIDR')]"
              ]
            },
            "subnets": [
              {
                "name": "[variables('dbSnName')]",
                "etag": "W/\"e6c04542-d1b8-4c00-a65d-3b99da4f805b\"",
                "properties": {
                  "addressPrefix": "[variables('dbCIDR')]",
                  "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('dbNsgName'))]"
                  }
                }
              },
              {
                "name": "[variables('webSnName')]",
                "etag": "W/\"e6c04542-d1b8-4c00-a65d-3b99da4f805b\"",
                "properties": {
                  "addressPrefix": "[variables('webCIDR')]",
                  "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('webNsgName'))]"
                  }
                }
              },
              {
                "name": "[variables('jumpSnName')]",
                "etag": "W/\"e6c04542-d1b8-4c00-a65d-3b99da4f805b\"",
                "properties": {
                  "addressPrefix": "[variables('jumpCIDR')]",
                  "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('jumpNsgName'))]"
                  }
                }
              }

            ],
            "virtualNetworkPeerings": []
          },
          "dependsOn": [
            "[resourceId('Microsoft.Network/networkSecurityGroups', variables('dbNsgName'))]",
            "[resourceId('Microsoft.Network/networkSecurityGroups', variables('jumpNsgName'))]",
            "[resourceId('Microsoft.Network/networkSecurityGroups', variables('webNsgName'))]"
          ]
        }
        ]
      }
